--- a/sections/masonry.liquid
+++ b/sections/masonry.liquid
@@ -2,17 +2,21 @@
 <h2>{{ section.settings.grid_title }}</h2>
 
 <!-- image, text and url are nested in the block -->
-
-<!-- Pull in Image from masonry grid -->
-<!-- Pull in Text from masonry grid -->
-<!-- Pull in URL from masonry grid -->
-
-<div
-  class="grid"
-  data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 200 }'
->
-  <div class="grid-item"></div>
-  <div class="grid-item"></div>
+<div class="masonry-grid">
+  {%- for block in section.blocks -%}
+  <div class="grid-item">
+    <a href="{{ block.settings.url }}" alt="{{ block.settings.text }}">
+      <img
+        src="{{ block.settings.image | image_url: width:400 }}"
+        alt="{{ block.settings.text }}"
+        loading="lazy"
+      />
+    </a>
+    <a href="{{ block.settings.url }}" alt="{{ block.settings.text }}">
+      <h3>{{ block.settings.text }}</h3>
+    </a>
+  </div>
+  {%- endfor -%}
 </div>
 
 {% schema %} { "name": "Masonry Grid Experimental", "settings": [ { "id":
@@ -21,4 +25,7 @@
 "category": "Masonry" } ], "blocks": [ { "name": "Masonry Image", "type":
 "masonry-image", "settings": [ { "type": "image_picker", "id": "image", "label":
 "Image" }, { "type": "text", "id": "text", "label": "Text" }, { "type": "url",
-"id": "url", "label": "URL" } ] } ] } {% endschema %}
+"id": "url", "label": "URL" } ] } ] } {% endschema %} {% javascript %} //
+vanilla JS // init with element var grid =
+document.querySelector('.masonry-grid'); var msnry = new Masonry( grid, { //
+options... itemSelector: '.grid-item', columnWidth: 200 }); {% endjavascript %}
